# libuv-prebuild

./: .gitignore  LICENSE  README.md
android/: .gitignore  build-android.sh
hisiv500/: build-hisiv500.sh  install-toolchain.sh  libuv-thread.c  toolchain.cmake
ios/: .gitignore  build-ios.sh
linux/: build-linux.sh
mac/: .gitignore  build-mac.sh
v1.38-files/: libuv-mac-x86_64.dylib  libuv-win-x64.lib  libuv-win-x86.lib
win/: build-win.sh
win/test/: CMakeLists.txt  main.c  run-cl.bat  run.sh
